--- a/views/detail_product.ejs
+++ b/views/detail_product.ejs
@@ -139,11 +139,7 @@
                         </div>
                     </div>
                     
-
-                      
-
-                    
-
+                                      
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
@@ -153,13 +149,13 @@
                       <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <p>
-                                Opsional: Jika anda ingin mendapatkan bukti pembayaran atas pembelian anda, harap mengisi alamat emailnya Coda Rewards sebesar 3% yang terkirim akan di notify ke email kamu
+                                proses pembayaran atas pembelian anda akan dikirim melalui E-Mail, harap memastikan alamat email benar
                             </p>
 
                             <div class="form-floating mb-3">
                                 <input type="email" class="form-control" id="floatingInput" name="alamat_email" value="<%= session.user.email %>" placeholder="name@example.com" required>
                                 <label for="floatingInput">Masukkan Alamat E-Mail</label>
-                                <small class="text-warning">*) Bagian ini opsional
+                                <small class="text-warning">*) Gunakan email aktif
                                 </small>
 
                             </div>
