--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -57,9 +57,9 @@
                     </li>
                 </ul> -->
                 <div class="d-grid gap-2">
-                    <a class="btn btn-outline-light" href="/rewards">Rewards</a>
+                    <a class="btn btn-outline-light" href="#">Rewards</a>
 
-                     <a class="btn btn-outline-light" href="/transaction-history">Riwayat Transaksi</a>
+                     <a class="btn btn-outline-light" href="/riwayat_transaksi">Riwayat Transaksi</a>
                      <a class="btn btn-danger" href="/logout">Keluar</a>
                 </div>
             </div>
