--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,9 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="icon" href="/img/delta_store.png" />
 </head>
-<body data-bs-theme="dark">
+<body data-bs-theme="dark" class="animate__animated animate__fadeIn">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  
 
     <%-include('layouts');%>
 
@@ -64,32 +65,34 @@
         </div>
         <% }) %>
 
-      <h2 class="text-warning-emphasis">Delta Store</h2>
-      <span class="small text-light fst-italic">membuat anda top-up lebih semangat</span>
-      <hr>
+      <h2 class="text-warning-emphasis animate__animated  animate__fadeInLeft">Delta Store</h2>
+      <p class="small text-light fst-italic animate__animated animate__fadeInUp">membuat anda top-up lebih semangat</p>
 
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+      <hr>
+      
+
+        <div id="carouselExampleDark" class="carousel carousel-dark slide animate__animated animate__fadeInUp">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner  p-3 mb-3">
-              <div class="carousel-item active" data-bs-interval="10000">
+            <div class="carousel-inner p-3 mb-3">
+              <div class="carousel-item active" data-bs-interval="3000">
                 <img src="/img/ads/ads-3.jpg" class="d-block mx-auto w-50" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <!-- <h5>First slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p> -->
                 </div>
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
+              <div class="carousel-item" data-bs-interval="3000">
                 <img src="/img/ads/ads-2.jpg" class="d-block mx-auto w-50" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <!-- <h5>Second slide label</h5>
                   <p>Some representative placeholder content for the second slide.</p> -->
                 </div>
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="3000">
                 <img src="/img/ads/ads-1.jpg" class="d-block mx-auto w-50" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <!-- <h5>Third slide label</h5>
@@ -107,7 +110,7 @@
             </button> -->
         </div>
 
-        <h2 class="mt-3 badge text-warning fs-3">Lebih Hemat Pakai Delta Store</h2>
+        <h2 class="mt-3 badge text-warning fs-3 animate__animated animate__fadeInDown">Lebih Hemat Pakai Delta Store</h2>
 
         <div class="card border-1 shadow-lg">
             <div class="card-body">
@@ -121,20 +124,32 @@
                 </style>
 
 
+                <style>
+                    /* Efek animasi saat hover */
+                    .card {
+                        transition: transform 0.3s ease;
+                    }
+
+                    .card:hover {
+                        transform: scale(1.05);
+                    }
+                </style>
+
                 <div class="row d-flex">
                     <% games.forEach(game => { %>
-                        <div class="col-md-6 col-lg-4 mb-3 ">
-                            <a href="/game/<%= game.id %>">
-                                <div class="card border-1 shadow-lg mx-auto" style="width: 16rem;">
-                                    <img src="<%= game.gambar %>" class="card-img-top mt-1 " alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title text-center"><%= game.nama_game %></h5>  
-                                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <a href="/game/<%= game.id %>">
+                            <div class="card border-1 shadow-lg mx-auto" style="width: 16rem;">
+                                <img src="<%= game.gambar %>" class="card-img-top mt-1 " alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center"><%= game.nama_game %></h5>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
+                    </div>
                     <% }); %>
                 </div>
+
 
 
             </div>
