--- a/views/admin/login_adm.ejs
+++ b/views/admin/login_adm.ejs
@@ -41,7 +41,7 @@
                   </div>
 
                   <div class="mt-2">
-                    <p>Belum memiliki akun ?<span><a href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">&nbsp;Daftar Sekarang</a></span></p>
+                    <!-- <p>Belum memiliki akun ?<span><a href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">&nbsp;Daftar Sekarang</a></span></p> -->
                   </div>
       
       
