--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -40,8 +40,8 @@
                   <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                           <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                              jumlah Pengguna</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                              jumlah Customer</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800"> <%= totalCustomers %></div>
                       </div>
                       <div class="col-auto">
                           <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -60,7 +60,7 @@
                           <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                               jumlah Pembelian
                           </div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800"> <%= totalTransactions %></div>
                       </div>
                       <div class="col-auto">
                           <i class="fas fa-calendar fa-2x text-gray-300"></i>
